--- a/accounts/templates/userindex.html
+++ b/accounts/templates/userindex.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Books Sharing System</title>
+    <title>User Index</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -26,7 +25,7 @@
 
 
 <body>
-
+<h1>USER INDEX</h1>
 
     <div class="container-fluid bcontent" >
         
@@ -36,10 +35,10 @@
             &nbsp;&nbsp;&nbsp;
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'index' %}"><b>Home</b></a>
+                    <a class="nav-link" href=""><b>Home</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:login' %}"><b>User Login</b></a>
+                    <a class="nav-link" href=""><b>User Login</b></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><b>Delivery Agent Login</b></a>
