--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -52,7 +52,7 @@
                     <a class="nav-link" href="{% url 'index' %}"><b>Home</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}"><b>User Login</b></a>
+                    <a class="nav-link" href="{% url 'accounts:login' %}"><b>User Login</b></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><b>Delivery Agent Login</b></a>
@@ -64,7 +64,7 @@
            
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-primary btn-lg" type="submit">Search</button>
+                <button class="btn btn-primary btn-sm" type="submit">Search</button>
             </form>
         </nav>
     </div>
@@ -77,8 +77,8 @@
                 alt="Sample image">
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-              <form>
-               
+              <form action="login" method="POST">
+                {% csrf_token %}
       
                 <div class="divider d-flex align-items-center my-4">
                   <p class="text-center fw-bold mx-3 mb-0"><b>Sign In</b></p>
@@ -87,14 +87,14 @@
                 <!-- Email input -->
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example3">Email address</label>
-                  <input type="email" id="form3Example3" class="form-control form-control-lg"
+                  <input type="email" id="email" name="email" class="form-control form-control-lg"
                     placeholder="Enter a Valid Email Address" />
                 </div>
       
                 <!-- Password input -->
                 <div class="form-outline mb-3">
                   <label class="form-label" for="form3Example4">Password</label>
-                  <input type="password" id="form3Example4" class="form-control form-control-lg"
+                  <input type="password" name="password" id="password" class="form-control form-control-lg"
                     placeholder="Enter Password" />
                 </div>
       
@@ -110,13 +110,22 @@
                 </div>
       
                 <div class="text-center text-lg-start mt-4 pt-2">
-                  <button type="button" class="btn btn-primary btn-lg"
+                  <button type="submit" class="btn btn-primary btn-lg"
                     style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                  <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="{% url 'accounts:register' %}"
-                      class="link-danger">Register</a></p>
+                  <p  class="small fw-bold mt-2 pt-1 mb-0"><b>Don't have an account?</b> <a href="{% url 'accounts:register' %}"
+                      class="link-danger"><b>Register</b></a></p>
+
+                      <div>
+                        {% for message in messages %}
+                        <p style="color: green;align-self: right;">{{ message }}<p>
+                         {% endfor %}
+                    </div>
                 </div>
       
               </form>
+            
+              
+
             </div>
           </div>
         </div>
