user module created

--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -51,7 +51,7 @@
                     <a class="nav-link" href="{% url 'index' %}"><b>Home</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}"><b>User Login</b></a>
+                    <a class="nav-link" href=" login"><b>User Login</b></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><b>Delivery Agent Login</b></a>
@@ -143,6 +143,7 @@
             </div>
           </div>
         </div>
+  
    
 <div style="margin-top: 200px;">
     <footer class="container-fluid bcontent" , align="center">
