--- a/user/templates/cart.html
+++ b/user/templates/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>User Index</title>
+    <title>Cart</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -25,26 +25,26 @@
 
 
 <body>
-<h1>USER INDEX</h1>
+
 
     <div class="container-fluid bcontent" >
         
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
-            <a class="navbar-brand" href="{% url 'index' %}">
+            <a class="navbar-brand" href="#">
                 <img src="https://www.tutlane.com/images/categorylogo/bootstrap.png" width="30" height="30" /> <b>Books Sharing System</b></a>
             &nbsp;&nbsp;&nbsp;
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href=""><b>Home</b></a>
+                    <a class="nav-link" href="userindex"><b>Home</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href=""><b>User Login</b></a>
+                    <a class="nav-link" href="#"><b></b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><b>Delivery Agent Login</b></a>
+                    <a class="nav-link" href="#"><b></b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><b>Admin</b></a>
+                    <a class="nav-link" href="#"><b></b></a>
                 </li>
             </ul>
            
@@ -52,26 +52,24 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-primary btn-sm" type="submit">Search</button>
             </form>
+            <p align="right">
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+              {% if request.session.email %}
+              Welcome:
+              {{request.session.email}}<br><a href="">logout</a>{% else%}{% endif %}
+          </p>
         </nav>
     </div>
-    <div class ="container-fluid bcontent">
+    
 
-        <section>
-            <div>
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Buy</a>
-                    </div>
-                  </div>
-
-            </div>
-        </section>
-    </div>
-
-    <div style="margin-top: 200px;">
+    <div style="margin-top: 500px;">
         <footer class="container-fluid bcontent" , align="center">
             <a href="#"><i class="fa fa-facebook-official"></i></a>
             <a href="#"><i class="fa fa-pinterest-p"></i></a>
