--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -3,7 +3,7 @@
 
 <html lang="en">
 <head>
-    <title>Login</title>
+    <title>User Login</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -88,7 +88,7 @@
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example3">Email address</label>
                   <input type="email" id="email" name="email" class="form-control form-control-lg"
-                    placeholder="Enter a Valid Email Address" />
+                    placeholder="Enter Email Address" />
                 </div>
       
                 <!-- Password input -->
