user module updated

--- a/user/templates/addbooks.html
+++ b/user/templates/addbooks.html
@@ -67,7 +67,48 @@
           </p>
         </nav>
     </div>
-    
+  
+    <div class="container-fluid bcontent" >
+        <form> 
+            <div class="form-row">
+              <div class="form-group col-md-4">
+                <label for="inputEmail4">Book Name</label>
+                <input  type="email" class="form-control" id="inputEmail4" placeholder="Book Name">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputPassword4">Book Author</label>
+                <input  type="password" class="form-control" id="inputPassword4" placeholder="Book Author">
+              </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                  <label for="inputEmail4">Description</label>
+                  <input  type="email" class="form-control" id="inputEmail4" placeholder="Description">
+                </div>
+                <div class="form-group col-md-4">
+                  <label for="inputPassword4">Images</label>
+                  <input  type="file" class="form-control" id="inputPassword4" placeholder="Images" multiple>
+                </div>
+              </div>
+
+              <div class="form-group col-md-4">
+                <label for="inputState">Sell/Rent</label>
+                <select id="inputState" class="form-control">
+                  <option selected>Sell/Rent</option>
+                  <option>Sell</option>
+                  <option>Rent</option>
+                </select>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputZip">Price</label>
+                <input type="text" class="form-control" id="inputZip">
+              </div>
+            </div>
+            <button  type="submit" class="btn btn-primary">add books</button>
+          </form>
+    </div>
+   
+
 
     <div style="margin-top: 700px;">
         <footer class="container-fluid bcontent" , align="center">
