--- a/user/templates/userindex.html
+++ b/user/templates/userindex.html
@@ -41,10 +41,10 @@
                     <a class="nav-link" href="{% url 'user:addbooks' %}"><b>Add Books</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="cart"><b>Cart</b></a>
+                    <a class="nav-link" href="{% url 'user:cart' %}"><b>Cart</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="profile"><b>Profile</b></a>
+                    <a class="nav-link" href="{% url 'user:profile' %}"><b>Profile</b></a>
                 </li>
             </ul>
            
