--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -67,11 +67,7 @@
             </form>
         </nav>
     </div>
-    <div>
-      {% for message in mesages %}
-         <h6>  {{messages}}  </h6>
-      {% endfor %}
-  </div>
+    
     <section class="vh-100">
         <div class="container-fluid h-custom">
           <div class="row d-flex justify-content-center align-items-center h-100">
@@ -119,7 +115,11 @@
                     <input type="text" id="email" name="email" class="form-control form-control-sm"
                       placeholder="Email" required/>
                   </div>
-                
+                  <div>
+                    {% for message in messages %}
+                    <p style="color: red;align-self: right;">{{ message }}<p>
+                     {% endfor %}
+                </div>
                 <!-- Password -->
                 <div class="form-outline mb-3">
                     <label class="form-label" for="form3Example4">Password</label>
@@ -137,7 +137,7 @@
                   <input type="submit"  class="btn btn-primary btn-lg"
                     style="padding-left: 2.5rem; padding-right: 2.5rem;"></input>
                 </div>
-      
+                
               </form>
               
             </div>
