user module updated

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Books Sharing System</title>
+    <title>user index</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -62,8 +61,8 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="..." alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">Book title</h5>
+                      <p class="card-text">Book Description.</p>
                       <a href="#" class="btn btn-primary">Buy</a>
                     </div>
                   </div>
@@ -72,7 +71,7 @@
         </section>
     </div>
 
-    <div style="margin-top: 200px;">
+    <div style="margin-top: 360px;">
         <footer class="container-fluid bcontent" , align="center">
             <a href="#"><i class="fa fa-facebook-official"></i></a>
             <a href="#"><i class="fa fa-pinterest-p"></i></a>
