--- a/user/templates/cart.html
+++ b/user/templates/cart.html
@@ -35,7 +35,7 @@
             &nbsp;&nbsp;&nbsp;
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="userindex"><b>Home</b></a>
+                    <a class="nav-link" href="{% url 'user:userindex' %}"><b>Home</b></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><b></b></a>
@@ -61,13 +61,17 @@
                 &nbsp;
                 &nbsp;
                 &nbsp;
-              {% if request.session.email %}
+                {% for prof in profile %}
               Welcome:
-              {{request.session.email}}<br><a href="{% url 'user:logout' %}">logout</a>{% else%}{% endif %}
+              {{prof.firstname}}<br><a href="{% url 'user:logout' %}"> Logout</a>{% endfor %} 
           </p>
         </nav>
     </div>
-    
+    <div class="container-fluid bcontent">
+        {% for message in messages %}
+        <p  style="color: green;text-align-last:center ;">{{ message }}<p>
+         {% endfor %}
+        </div>
 
     <div style="margin-top: 500px;">
         <footer class="container-fluid bcontent" , align="center">
