--- a/user/templates/profile.html
+++ b/user/templates/profile.html
@@ -61,15 +61,62 @@
                 &nbsp;
                 &nbsp;
                 &nbsp;
-              {% if request.session.email %}
+                {% for prof in profile %}
               Welcome:
-              {{request.session.email}}<br><a href="{% url 'user:logout' %}">logout</a>{% else%}{% endif %}
+              {{prof.firstname}}<br><a href="{% url 'user:logout' %}"> Logout</a>{% endfor %} 
           </p>
         </nav>
     </div>
     
+<div>
+    
+    <div class="container rounded bg-white mt-5 mb-5">
+        {% for prof in profile %} 
+        <div class="row">
+            <div class="col-md-3 border-right">
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">{{prof.firstname}} {{prof.lastname}}</span><span class="text-black-50">{{request.session.email}}</span><span> </span></div>
+            </div>
+            <div class="col-md-5 border-right">
+                <div class="p-3 py-5">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <h4 class="text-right">Profile Settings</h4>
+                    </div>
+                     
+                    {% csrf_token %}
+                    <div class="row mt-2">
+                       
+                        <div class="col-md-6"><label class="labels">Firstname</label><input type="text" class="form-control" placeholder="first name" value="{{prof.firstname}}"></div>
+                        <div class="col-md-6"><label class="labels">Lastname</label><input type="text" class="form-control" value="{{prof.lastname}}" placeholder="last name"></div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-12"><label class="labels">Mobile Number</label><input type="text" class="form-control" placeholder="enter phone number" value="{{prof.phone}}"></div>
+                        <div class="col-md-12"><label class="labels">Address</label><input type="text" class="form-control" placeholder="enter address line 1" value="{{prof.address}}"></div>
+                    
+                        <div class="col-md-12"><label class="labels">Pincode</label><input type="text" class="form-control" placeholder="" value=""></div>
+                        
+                        
+                        <div class="col-md-12"><label class="labels">Email ID</label><input type="text" class="form-control" placeholder="enter email id" value="{{request.session.email}}"></div>
+                        
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value=""></div>
+                        <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
+                    </div>
+                    {% endfor %} 
+                    <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Update Profile</button></div>
+                </div>
+            </div>
+           
+        </div>
+    </div>
+    </div>
+    </div>
 
-    <div style="margin-top: 700px;">
+    
+
+
+</div>
+    <div style="margin-top: 90px;">
         <footer class="container-fluid bcontent" , align="center">
             <a href="#"><i class="fa fa-facebook-official"></i></a>
             <a href="#"><i class="fa fa-pinterest-p"></i></a>
