--- a/user/templates/userindex.html
+++ b/user/templates/userindex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>User Index</title>
+    <title>Index</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -35,7 +35,7 @@
             &nbsp;&nbsp;&nbsp;
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><b>Home</b></a>
+                    <a class="nav-link" href="{% url 'user:userindex' %}"><b>Home</b></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'user:addbooks' %}"><b>Add Books</b></a>
@@ -53,39 +53,43 @@
                 <button class="btn btn-primary btn-sm" type="submit">Search</button>
             </form>
             
-          <p align="right">
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-            {% if request.session.email %}
-            Welcome:
-            {{request.session.email}}<br><a href="{% url 'user:logout' %}">logout</a>{% else%}{% endif %}
-        </p>
+            
+         <p><a href="{% url 'user:logout' %}"> Logout</a></p>
                 
             
         </nav>
     </div>
+    <div class="container-fluid bcontent">
+    {% for message in messages %}
+    <p  style="color: red;text-align-last:center ;">{{ message }}<p>
+     {% endfor %}
+    </div>
+    
+    {% for dis in display %}
+</div>
+       
     <div class ="container-fluid bcontent">
-
-        <section>
-            <div>
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-body" src="{{dis.image}}" alt="{{dis.image}}">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Buy</a>
+                      <h5 class="card-title">{{dis.bookname}}</h5>
+                      <p class="card-text">{{dis.description}}</p>
+                      {% if request.user.is_authenticated %}
+                      <form action="userindex" method="POST">
+                        {% csrf_token %}
+                        <input hidden type="text" value="{{dis.bid}}" name="pid" visibility="hidden">
+                        <input hidden type="text" value="{{dis.userid}}" name="sid">
+                      <p><input type="submit" class="btn btn-primary" value="add to cart"><p class="card-text">Price:{{dis.price}}</p></p>
+                    </form>
+                      {% endif %}
                     </div>
                   </div>
-
-            </div>
-        </section>
+       
+        
     </div>
+
+    {% endfor %}
+
 
     <div style="margin-top: 500px;">
         <footer class="container-fluid bcontent" , align="center">
