--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -145,18 +145,18 @@
         </div>
   
    
-<div style="margin-top: 200px;">
-    <footer class="container-fluid bcontent" , align="center">
-        <a href="#"><i class="fa fa-facebook-official"></i></a>
-        <a href="#"><i class="fa fa-pinterest-p"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-flickr"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <p class="container-fluid bcontent">
-        Powered by <a href="" target="_blank">Books Sharing System</a>
-        </p>
-      </footer>
-    </div>
+        <div style="margin-top:80px;" class="container-fluid bcontent">
+          <footer style="background-color:whitesmoke" class="container-fluid bcontent" , align="center">
+              <a href="#"><i class="fa fa-facebook-official"></i></a>
+              <a href="#"><i class="fa fa-pinterest-p"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-flickr"></i></a>
+              <a href="#"><i class="fa fa-linkedin"></i></a>
+              <p class="container-fluid bcontent">
+              Powered by <a href="" target="_blank">Books Sharing System</a>
+              </p>
+            </footer>
+          </div>
 </body>
 
 
