--- a/user/templates/userindex.html
+++ b/user/templates/userindex.html
@@ -13,10 +13,9 @@
 
     <style>
         
-        .bcontent {
-            margin-top: 10px;
-        }
+     
         
+
         
     </style>
 
@@ -53,9 +52,19 @@
                 <button class="btn btn-primary btn-sm" type="submit">Search</button>
             </form>
             
-            
-         <p><a href="{% url 'user:logout' %}"> Logout</a></p>
-                
+            <p align="right">
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                {% for prof in profile %}
+              Welcome:
+              {{prof.firstname}}<br><a href="{% url 'user:logout' %}"> Logout</a> <i class="fa fa-sign-out"></i{% endfor %} 
+          </p>  
             
         </nav>
     </div>
@@ -66,33 +75,42 @@
     </div>
     
     {% for dis in display %}
-</div>
+
        
     <div class ="container-fluid bcontent">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-body" src="{{dis.image}}" alt="{{dis.image}}">
+        <div class="cards" >
+                <div class="card" style="width: 18rem;" >
+                  
                     <div class="card-body">
                       <h5 class="card-title">{{dis.bookname}}</h5>
                       <p class="card-text">{{dis.description}}</p>
-                      {% if request.user.is_authenticated %}
-                      <form action="userindex" method="POST">
+                      <p class="card-text">Price:<b>{{dis.price}}</b></p>
+                     
+                      <form  action="userindex" method="POST">
                         {% csrf_token %}
-                        <input hidden type="text" value="{{dis.bid}}" name="pid" visibility="hidden">
+                        <input hidden type="text" value="{{dis.bid}}" name="pid" >
                         <input hidden type="text" value="{{dis.userid}}" name="sid">
-                      <p><input type="submit" class="btn btn-primary" value="add to cart"><p class="card-text">Price:{{dis.price}}</p></p>
-                    </form>
-                      {% endif %}
+                        <input hidden type="text" value="{{dis.bookname}}" name="bname">
+                        
+                        <input type="submit" class="btn btn-primary"  value=" Add to Cart"></input>
+                   
+                      </form>
+                     
+                    
                     </div>
+                    
+                
                   </div>
+        </div>
        
         
-    </div>
+    </div><br>
 
     {% endfor %}
 
 
-    <div style="margin-top: 500px;">
-        <footer class="container-fluid bcontent" , align="center">
+    <div style="margin-top:410px;" class="container-fluid bcontent">
+        <footer style="background-color:whitesmoke" class="container-fluid bcontent" , align="center">
             <a href="#"><i class="fa fa-facebook-official"></i></a>
             <a href="#"><i class="fa fa-pinterest-p"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
