--- a/user/templates/profile.html
+++ b/user/templates/profile.html
@@ -63,7 +63,7 @@
                 &nbsp;
                 {% for prof in profile %}
               Welcome:
-              {{prof.firstname}}<br><a href="{% url 'user:logout' %}"> Logout</a>{% endfor %} 
+              {{prof.firstname}}<br><a href="{% url 'user:logout' %}"> Logout</a> <i class="fa fa-sign-out"></i>{% endfor %} 
           </p>
         </nav>
     </div>
@@ -116,18 +116,18 @@
 
 
 </div>
-    <div style="margin-top: 90px;">
-        <footer class="container-fluid bcontent" , align="center">
-            <a href="#"><i class="fa fa-facebook-official"></i></a>
-            <a href="#"><i class="fa fa-pinterest-p"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-flickr"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <p class="container-fluid bcontent">
-            Powered by <a href="" target="_blank">Books Sharing System</a>
-            </p>
-          </footer>
-        </div>
+<div style="margin-top:200px;" class="container-fluid bcontent">
+    <footer style="background-color:whitesmoke" class="container-fluid bcontent" , align="center">
+        <a href="#"><i class="fa fa-facebook-official"></i></a>
+        <a href="#"><i class="fa fa-pinterest-p"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-flickr"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <p class="container-fluid bcontent">
+        Powered by <a href="" target="_blank">Books Sharing System</a>
+        </p>
+      </footer>
+    </div>
 </body>
 
 
